[package]
name = "tauri-async-handler"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
tauri = { version = "0.5", default-features = false }
async-std = { version = "1.6", optional = true }
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }

[features]
default = ["async-std"]
tokio02 = ["async-std/tokio02"]
