[package]
name = "tauri-async-handler"
description = "A async handler for tauri"
license = "MIT"
documentation = "https://docs.rs/tauri-async-handler"
repository = "https://github.com/spacemeowx2/tauri-async-handler"
version = "0.2.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
tauri = { version = "0.6", default-features = false }
async-std = { version = "1.6", optional = true }
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
anyhow = "1.0"

[features]
default = ["async-std"]
tokio02 = ["async-std/tokio02"]
